kubernetes/apps/observability/victoria-logs/app/service-envoy-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: victoria-logs-envoy-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: logs.${HOME_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${IPAM_IP_ENVOY_INTERNAL}
spec:
  type: ExternalName
  externalName: envoy-internal.network.svc.cluster.local
