kubernetes/apps/observability/victoria-logs/app/vmalert-service.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/kubernetes/v1/service.json
apiVersion: v1
kind: Service
metadata:
  name: victoria-logs-vmalert
spec:
  selector:
    app.kubernetes.io/name: victoria-logs-vmalert
  ports:
  - name: http
    port: 8880
    targetPort: http
