kubernetes/apps/observability/victoria-logs/app/acceptance-deny-backend.yaml
# yaml-language-server: $schema=https://k8s-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoria-logs-collector-acceptance-deny-backend
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: victoria-logs-collector
      app.kubernetes.io/name: victoria-logs-collector
  egress:
  - toEntities:
    - all
  egressDeny:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: observability
        k8s:app.kubernetes.io/instance: victoria-logs
        k8s:app.kubernetes.io/name: victoria-logs-single
